deleted:    models/ssd_mobilenet_v2_coco_2018_03_29/frozen_inference_graph.pb

--- a/python/DeepLearning/object_detection/tf_object_detection.ipynb
+++ b/python/DeepLearning/object_detection/tf_object_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,59 @@
     "The python file is available at https://github.com/opencv/opencv/blob/master/samples/dnn/tf_text_graph_ssd.py\n",
     "\n",
     "**A sample config file has been included**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2018-07-10 13:23:02--  http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
+      "Resolving download.tensorflow.org (download.tensorflow.org)... 172.217.31.208, 2404:6800:4007:801::2010\n",
+      "Connecting to download.tensorflow.org (download.tensorflow.org)|172.217.31.208|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 187925923 (179M) [application/x-tar]\n",
+      "Saving to: ‘ssd_mobilenet_v2_coco_2018_03_29.tar.gz’\n",
+      "\n",
+      "ssd_mobilenet_v2_co 100%[===================>] 179.22M  10.2MB/s    in 19s     \n",
+      "\n",
+      "2018-07-10 13:23:23 (9.53 MB/s) - ‘ssd_mobilenet_v2_coco_2018_03_29.tar.gz’ saved [187925923/187925923]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssd_mobilenet_v2_coco_2018_03_29/checkpoint\n",
+      "ssd_mobilenet_v2_coco_2018_03_29/model.ckpt.meta\n",
+      "ssd_mobilenet_v2_coco_2018_03_29/pipeline.config\n",
+      "ssd_mobilenet_v2_coco_2018_03_29/saved_model/saved_model.pb\n",
+      "ssd_mobilenet_v2_coco_2018_03_29/frozen_inference_graph.pb\n",
+      "ssd_mobilenet_v2_coco_2018_03_29/saved_model/\n",
+      "ssd_mobilenet_v2_coco_2018_03_29/saved_model/variables/\n",
+      "ssd_mobilenet_v2_coco_2018_03_29/model.ckpt.index\n",
+      "ssd_mobilenet_v2_coco_2018_03_29/\n",
+      "ssd_mobilenet_v2_coco_2018_03_29/model.ckpt.data-00000-of-00001\n"
+     ]
+    }
+   ],
+   "source": [
+    "!tar -xvf ssd_mobilenet_v2_coco_2018_03_29.tar.gz"
    ]
   },
   {
