added support for downloading files in notebook

--- a/python/DeepLearning/object_detection/tf_object_detection.ipynb
+++ b/python/DeepLearning/object_detection/tf_object_detection.ipynb
@@ -32,34 +32,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2018-07-10 13:23:02--  http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
-      "Resolving download.tensorflow.org (download.tensorflow.org)... 172.217.31.208, 2404:6800:4007:801::2010\n",
-      "Connecting to download.tensorflow.org (download.tensorflow.org)|172.217.31.208|:80... connected.\n",
+      "--2018-07-10 13:26:13--  http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
+      "Resolving download.tensorflow.org (download.tensorflow.org)... 172.217.163.80, 2404:6800:4007:809::2010\n",
+      "Connecting to download.tensorflow.org (download.tensorflow.org)|172.217.163.80|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 187925923 (179M) [application/x-tar]\n",
       "Saving to: ‘ssd_mobilenet_v2_coco_2018_03_29.tar.gz’\n",
       "\n",
-      "ssd_mobilenet_v2_co 100%[===================>] 179.22M  10.2MB/s    in 19s     \n",
+      "ssd_mobilenet_v2_co 100%[===================>] 179.22M  11.2MB/s    in 16s     \n",
       "\n",
-      "2018-07-10 13:23:23 (9.53 MB/s) - ‘ssd_mobilenet_v2_coco_2018_03_29.tar.gz’ saved [187925923/187925923]\n",
+      "2018-07-10 13:26:30 (11.0 MB/s) - ‘ssd_mobilenet_v2_coco_2018_03_29.tar.gz’ saved [187925923/187925923]\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "os.chdir(\"models\")\n",
     "!wget http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +81,9 @@
     }
    ],
    "source": [
-    "!tar -xvf ssd_mobilenet_v2_coco_2018_03_29.tar.gz"
+    "!tar -xvf ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
+    "!rm ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
+    "os.chdir(\"..\")"
    ]
   },
   {
