modified:   tf_object_detection.ipynb

--- a/python/DeepLearning/object_detection/tf_object_detection.ipynb
+++ b/python/DeepLearning/object_detection/tf_object_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,53 +20,47 @@
     "Model files can be downloaded from the Tensorflow Object Detection Model Zoo\n",
     "https://github.com/tensorflow/models/blob/master/research/object_detection/g3doc/detection_model_zoo.md\n",
     "\n",
-    "**A sample mobilenet model has been included**\n",
+    "**The cell given below downloads a mobilenet model**\n",
     "\n",
     "## Create config file from frozen graph\n",
     "Once you download the model, extract the files and run the tf_text_graph_ssd.py file \n",
     "with input as the path to the frozen_graph.pb file and output as desired.\n",
     "The python file is available at https://github.com/opencv/opencv/blob/master/samples/dnn/tf_text_graph_ssd.py\n",
     "\n",
-    "**A sample config file has been included**"
+    "**A sample config file has been included in the models folder**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download mobilenet model file\n",
+    "The code below will run on Linux / MacOS systems.\n",
+    "Please download the file http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
+    "\n",
+    "Uncompress it and put it in models folder."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2018-07-10 13:26:13--  http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
-      "Resolving download.tensorflow.org (download.tensorflow.org)... 172.217.163.80, 2404:6800:4007:809::2010\n",
-      "Connecting to download.tensorflow.org (download.tensorflow.org)|172.217.163.80|:80... connected.\n",
+      "--2018-07-10 13:31:36--  http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
+      "Resolving download.tensorflow.org (download.tensorflow.org)... 172.217.163.208, 2404:6800:4007:80c::2010\n",
+      "Connecting to download.tensorflow.org (download.tensorflow.org)|172.217.163.208|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 187925923 (179M) [application/x-tar]\n",
       "Saving to: ‘ssd_mobilenet_v2_coco_2018_03_29.tar.gz’\n",
       "\n",
-      "ssd_mobilenet_v2_co 100%[===================>] 179.22M  11.2MB/s    in 16s     \n",
+      "ssd_mobilenet_v2_co 100%[===================>] 179.22M  11.2MB/s    in 17s     \n",
       "\n",
-      "2018-07-10 13:26:30 (11.0 MB/s) - ‘ssd_mobilenet_v2_coco_2018_03_29.tar.gz’ saved [187925923/187925923]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "os.chdir(\"models\")\n",
-    "!wget http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2018-07-10 13:31:54 (10.5 MB/s) - ‘ssd_mobilenet_v2_coco_2018_03_29.tar.gz’ saved [187925923/187925923]\n",
+      "\n",
       "ssd_mobilenet_v2_coco_2018_03_29/checkpoint\n",
       "ssd_mobilenet_v2_coco_2018_03_29/model.ckpt.meta\n",
       "ssd_mobilenet_v2_coco_2018_03_29/pipeline.config\n",
@@ -81,8 +75,19 @@
     }
    ],
    "source": [
+    "# Go to Models directory\n",
+    "os.chdir(\"models\")\n",
+    "\n",
+    "# Download the tensorflow Model\n",
+    "!wget http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
+    "\n",
+    "# Uncompress the file\n",
     "!tar -xvf ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
+    "\n",
+    "# Delete the tar.gz file\n",
     "!rm ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
+    "\n",
+    "# Come back to the previous directory\n",
     "os.chdir(\"..\")"
    ]
   },
