More Object Detection changes

--- a/python/DeepLearning/object_detection/tf_object_detection.ipynb
+++ b/python/DeepLearning/object_detection/tf_object_detection.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {
     "scrolled": false
    },
@@ -205,6 +205,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def display_text(im, text, x, y):\n",
+    "    \n",
+    "    # Get text size \n",
+    "    textSize = cv2.getTextSize(text, FONTFACE, FONT_SCALE, THICKNESS)\n",
+    "    dim = textSize[0]\n",
+    "    baseline = textSize[1]\n",
+    "            \n",
+    "    # Use text size to create a black rectangle    \n",
+    "    cv2.rectangle(im, (x,y-dim[1] - baseline), (x + dim[0], y + baseline), (0,0,0), cv2.FILLED);\n",
+    "    # Display text inside the rectangle\n",
+    "    cv2.putText(im, text, (x, y-5 ), FONTFACE, FONT_SCALE, (0, 255, 255), THICKNESS, cv2.LINE_AA)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -217,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -231,8 +254,7 @@
     "\n",
     "def display_objects(im, objects, threshold = 0.25):\n",
     "\n",
-    "    rows = im.shape[0]\n",
-    "    cols = im.shape[1]\n",
+    "    rows = im.shape[0]; cols = im.shape[1]\n",
     "\n",
     "    # For every Detected Object\n",
     "    for i in range(objects.shape[2]):\n",
@@ -240,7 +262,7 @@
     "        classId = int(objects[0, 0, i, 1])\n",
     "        score = float(objects[0, 0, i, 2])\n",
     "        \n",
-    "        # The locations given are normalized. They should be multiplied by the height and width of the input\n",
+    "        # Recover original cordinates from normalized coordinates\n",
     "        x = int(objects[0, 0, i, 3] * cols)\n",
     "        y = int(objects[0, 0, i, 4] * rows)\n",
     "        w = int(objects[0, 0, i, 5] * cols - x)\n",
@@ -248,12 +270,7 @@
     "        \n",
     "        # Check if the detection is of good quality\n",
     "        if score > threshold:\n",
-    "            display_text = \"{}\".format(labels[classId])\n",
-    "            textSize = cv2.getTextSize(display_text, FONTFACE, FONT_SCALE, THICKNESS)\n",
-    "            dim = textSize[0]\n",
-    "            baseline = textSize[1]\n",
-    "            cv2.rectangle(im, (x,y-dim[1] - baseline), (x + dim[0], y + baseline), (0,0,0), cv2.FILLED);\n",
-    "            cv2.putText(im, display_text, (x, y-5 ), FONTFACE, FONT_SCALE, (0, 255, 255), THICKNESS, cv2.LINE_AA)\n",
+    "            display_text(im, \"{}\".format(labels[classId]), x, y)\n",
     "            cv2.rectangle(im, (x, y), (x + w, y + h), (255, 255, 255), 2)\n",
     "    \n",
     "    # Convert Image to RGB since we are using Matplotlib for displaying image\n",
@@ -274,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -321,11 +338,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# That's Fake!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [
