Updated IPython Notebooks

--- a/python/DeepLearning/object_detection/tf_object_detection.ipynb
+++ b/python/DeepLearning/object_detection/tf_object_detection.ipynb
@@ -95,7 +95,11 @@
     "\n",
     "if not os.path.isfile(modelFile):\n",
     "  # Go to Models directory\n",
-    "  os.chdir(\"models\")\n",
+    "  try:\n",
+    "    os.chdir(\"models\")\n",
+    "  except:\n",
+    "    os.mkdir(\"models\")\n",
+    "    os.chdir(\"models\")\n",
     "\n",
     "  # Download the tensorflow Model\n",
     "  !wget http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
@@ -403,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
