--- a/python/DeepLearning/pose/OpenPose.ipynb
+++ b/python/DeepLearning/pose/OpenPose.ipynb
@@ -36,26 +36,6 @@
     }
    },
    "source": [
-    "# Download Model \n",
-    "\n",
-    "```\n",
-    "# Download architecture file \n",
-    "wget https://raw.githubusercontent.com/CMU-Perceptual-Computing-Lab/openpose/master/models/pose/mpi/pose_deploy_linevec_faster_4_stages.prototxt -O model/mpi.prototxt\n",
-    "\n",
-    "# Download weights\n",
-    "wget http://posefs1.perception.cs.cmu.edu/OpenPose/models/pose_iter_160000.caffemodel -O model/mpi.caffemodel\n",
-    "\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "# Caffe Model Example : OpenPose \n",
     "![OpenPose Dance](openpose-dance.gif)"
    ]
@@ -93,12 +73,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "protoFile = \"model/mpi.prototxt\"\n",
     "weightsFile = \"model/mpi.caffemodel\"\n",
+    "if not os.path.isfile(protoFile):\n",
+    "  # Go to Models directory\n",
+    "  try:\n",
+    "    os.chdir(\"model\")\n",
+    "  except:\n",
+    "    os.mkdir(\"model\")\n",
+    "    os.chdir(\"model\")\n",
+    "\n",
+    "  # Download the proto file\n",
+    "  !wget https://raw.githubusercontent.com/CMU-Perceptual-Computing-Lab/openpose/master/models/pose/mpi/pose_deploy_linevec_faster_4_stages.prototxt -O mpi.prototxt\n",
+    "  # Download the model file\n",
+    "  !wget http://posefs1.perception.cs.cmu.edu/OpenPose/models/pose/mpi/pose_iter_160000.caffemodel -O mpi.caffemodel\n",
+    "  \n",
+    "  # Come back to the previous directory\n",
+    "  os.chdir(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "nPoints = 15\n",
     "POSE_PAIRS = [[0,1], [1,2], [2,3], [3,4], [1,5], [5,6], [6,7], [1,14], [14,8], [8,9], [9,10], [14,11], [11,12], [12,13] ]\n",
     "net = cv2.dnn.readNetFromCaffe(protoFile, weightsFile)"
@@ -319,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
