--- a/python/DeepLearning/object_detection/tf_object_detection.ipynb
+++ b/python/DeepLearning/object_detection/tf_object_detection.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,25 +93,22 @@
     "configFile = \"models/ssd_mobilenet_v2_coco_2018_03_29.pbtxt\"\n",
     "classFile = \"coco_class_labels.txt\"\n",
     "\n",
-    "if not os.path.isfile(modelFile):\n",
-    "  # Go to Models directory\n",
-    "  try:\n",
-    "    os.chdir(\"models\")\n",
-    "  except:\n",
+    "if not os.path.isdir('models'):\n",
     "    os.mkdir(\"models\")\n",
+    "\n",
+    "if not os.path.isfile(modelFile):\n",
     "    os.chdir(\"models\")\n",
+    "    # Download the tensorflow Model\n",
+    "    !wget http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
     "\n",
-    "  # Download the tensorflow Model\n",
-    "  !wget http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
+    "    # Uncompress the file\n",
+    "    !tar -xvf ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
     "\n",
-    "  # Uncompress the file\n",
-    "  !tar -xvf ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
+    "    # Delete the tar.gz file\n",
+    "    !rm ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
     "\n",
-    "  # Delete the tar.gz file\n",
-    "  !rm ssd_mobilenet_v2_coco_2018_03_29.tar.gz\n",
-    "\n",
-    "  # Come back to the previous directory\n",
-    "  os.chdir(\"..\")"
+    "    # Come back to the previous directory\n",
+    "    os.chdir(\"..\")"
    ]
   },
   {
@@ -127,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -182,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -210,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -244,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -295,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -354,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -407,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
