--- a/python/SatyaIntro/intro.ipynb
+++ b/python/SatyaIntro/intro.ipynb
@@ -123,7 +123,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "\n",
     "# High Dynamic Range Imaging\n",
@@ -234,7 +238,7 @@
     " * Visual search\n",
     " * Counterfeit detection\n",
     "3. **Security**\n",
-    " * Intrution detector\n",
+    " * Intrusion detector\n",
     " * Face recognition\n",
     " * Drone application\n",
     "4. **Medical** \n",
