Satya's slides + updates

--- a/python/SeamlessCloning/clone.ipynb
+++ b/python/SeamlessCloning/clone.ipynb
@@ -20,17 +20,6 @@
     }
    },
    "source": [
-    "![Warning](warning.jpg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "# Goal \n",
     "![Obama](obama-trump.jpg)"
    ]
@@ -189,6 +178,13 @@
     "ret, src_mask_bin = cv2.threshold(src_mask, 128,256, cv2.THRESH_BINARY)\n",
     "m = cv2.moments(src_mask_bin)\n",
     "center = (int(m['m01']/m['m00']), int(m['m10']/m['m00']) ) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](moments.jpg)"
    ]
   },
   {
